Added Authentication stuff and continued swagger docs
